# volume-limiting-controller

./: Cargo.toml  Dockerfile  README.md
charts/volume-limiting-controller/: Chart.yaml  values.yaml
charts/volume-limiting-controller/templates/: NOTES.txt  _helpers.tpl  cronjob.yaml  serviceaccount.yaml
src/: main.rs
