[package]
name = "volume-limiting-controller"
version = "0.1.0"
authors = ["Benjamin Smedberg <bsmedberg@xometry.com>"]
edition = "2018"

[dependencies]
futures = "0.3.5"
kube = "0.37.0"
kube-runtime = "0.37.0"
k8s-openapi = { version = "0.9.0", features = ["v1_17"], default-features=false }
serde = "1.0.94"
# serde_derive = "1.0.94"
serde_json = "1.0.56"
chrono = { version = "0.4.7", features = ["serde"] }
snafu = { version = "0.6.8", features = ["futures"] }
tokio = { version = "1.13.1", features = ["macros"] }
tracing = "0.1.18"
tracing-subscriber = { version = "0.2.8", features = ["json"] }
tracing-futures = "0.2.4"
lazy_static = "1.4.0"
